--- a/src/pages/services/freezer-repair.astro
+++ b/src/pages/services/freezer-repair.astro
@@ -101,18 +101,24 @@ import "css/service/style_services.css";
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Freezer Repair Cost - Labor Only Excluding Parts</h2>
+              <h2>Symptoms Of Freezer Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Ways to Save Money on Freezer Repair</h2>
+              <h2>Freezer Repair Cost - Labor Only Excluding Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
+              <h2>Ways to Save Money on Freezer Repair</h2>
+            </a>
+          </div>
+
+          <div class="list_left">
+            <a href="#left-menu-11">
               <h2>
                 What is included in Freezer Maintenance and How it Can Help Preven Repairs
               </h2>
@@ -120,31 +126,31 @@ import "css/service/style_services.css";
           </div>
 
           <div class="list_left">
-            <a href="#left-menu-11">
+            <a href="#left-menu-12">
               <h2>How to decide whether to repair or replace a freezer</h2>
             </a>
           </div>
 
           <div class="list_left">
-            <a href="#left-menu-12">
+            <a href="#left-menu-13">
               <h2>Same Day Appliance Repair at Your Service</h2>
             </a>
           </div>
 
           <div class="list_left">
-            <a href="#left-menu-13">
+            <a href="#left-menu-14">
               <h2>How Much Does It Cost to Repair a Freezer?</h2>
             </a>
           </div>
 
           <div class="list_left">
-            <a href="#left-menu-14">
+            <a href="#left-menu-15">
               <h2>Our Pricing Policy For Freezer Repair and How We Work</h2>
             </a>
           </div>
 
           <div class="list_left" id="list_left-line">
-            <a href="#left-menu-15">
+            <a href="#left-menu-16">
               <h2>FAQs</h2>
             </a>
           </div>
@@ -1264,91 +1270,79 @@ import "css/service/style_services.css";
             </div>
             <Btn />
           </div>
-
-          <!-- таблица -->
+          
           <div class="page213-content" id="left-menu-8">
+            <div class="content__page-full-hed">
+              <div class="content__page-hed-h">
+                <h2>Symptoms Of Freezer Issues</h2>
+              </div>
+            </div>
+
+            
+            <div class="content__page-full-desc">
+              <div class="content__page-desc">
+                <h3>Compressor Issues</h3>
+                <p>The freezer is not cooling, making loud noises, or cycling too frequently. The compressor is essential for the cooling cycle, pumping refrigerant through the coils. It's one of the most expensive parts to replace.</p>
+
+                <h3>Freezer Evaporator Fan Issues</h3>
+                <p>The freezer is cool but not cold enough, or there's uneven cooling, with frost building up in some areas more than others. This fan circulates cold air throughout the freezer. If it fails, the freezer may not maintain the desired temperature.</p>
+
+                <h3>Freezer  Thermostat Issues</h3>
+                <p>The freezer does not maintain the set temperature, run continuously, or not run at all. The thermostat monitors and regulates the temperature inside the freezer.</p>
+
+                <h3>Freezer Defrost Heater Issues</h3>
+                <p>There is excessive frost buildup inside the freezer compartment. The defrost heater prevents ice from accumulating on the freezer’s evaporator coils by melting the frost during the defrost cycle.</p>
+
+                <h3>Freezer Door Seal (Gasket) Issues</h3>
+                <p>Frost buildup near the door, energy waste, or a constantly running freezer are signs of a faulty door seal, which can leak cold air, reducing efficiency and effectiveness.</p>
+
+                <h3>Freezer Start Relay Issues</h3>
+                <p>The freezer is not starting, has intermittent operation, or makes clicking sounds. The start relay helps the compressor begin operating. A faulty relay can prevent the freezer from cooling.</p>
+
+                <h3>Freezer Control Board Issues</h3>
+                <p>The freezer is not functioning correctly, has erratic behaviors, or has nonresponsive electronic components. The control board governs the major electrical functions of the freezer. If it fails, it can affect many aspects of its operation.</p>
+
+                <h3>Freezer Temperature Sensor or Thermistor Issues</h3>
+                <p>The freezer is not maintaining the correct temperature or temperature fluctuations. This sensor monitors the internal temperature and signals the control board to adjust cooling.</p>
+              </div>
+            </div>
+
+            <Btn />
+          </div>
+
+          <div class="page213-content" id="left-menu-9">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Freezer Repair Cost - Labor Only Excluding Parts</h2>
               </div>
             </div>
 
+            
             <div class="content__page-full-desc">
               <div class="content__page-desc">
-                <div class="full-content_job-prices">
-                  <div class="content_job-prices" id="col-prices">
-                    <div class="desk_job-prices">
-                      <a href="#"
-                        ><p>
-                          Microwave not heating food properly or at all.
-                        </p></a
-                      >
-                      <p>Microwave Magnetron replacement cost</p>
-                    </div>
-                    <div class="money_job-prices"><p>$100 - $150</p></div>
-                  </div>
-
-                  <div class="content_job-prices">
-                    <div class="desk_job-prices">
-                      <a href="#"
-                        ><p>
-                          Microwave not turning on, door not closing properly,
-                          or sparking inside.
-                        </p></a
-                      >
-                      <p>Microwave Door Switches or Seals replacement cost</p>
-                    </div>
-                    <div class="money_job-prices"><p>$80 - $150</p></div>
-                  </div>
-
-                  <div class="content_job-prices" id="col-prices">
-                    <div class="desk_job-prices">
-                      <a href="#"
-                        ><p>
-                          Buttons not responding, display not working, or
-                          erratic behavior.
-                        </p></a
-                      >
-                      <p>Microwave Control Panel replacement cost</p>
-                    </div>
-                    <div class="money_job-prices"><p>$100 - $200</p></div>
-                  </div>
-
-                  <div class="content_job-prices">
-                    <div class="desk_job-prices">
-                      <a href="#"
-                        ><p>
-                          The turntable ishe turntable is not rotating during
-                          operation.
-                        </p></a
-                      >
-                      <p>Microwave Turntable Motor replacement cost</p>
-                    </div>
-                    <div class="money_job-prices"><p>$80 - $100</p></div>
-                  </div>
-
-                  <div class="content_job-prices" id="col-prices">
-                    <div class="desk_job-prices">
-                      <a href="#"
-                        ><p>
-                          Microwave not heating properly, sparking, or making
-                          loud buzzing noises.
-                        </p></a
-                      >
-                      <p>
-                        Microwave High Voltage Diodes or Capacitors replacement
-                        cost
-                      </p>
-                    </div>
-                    <div class="money_job-prices"><p>$80 - $100</p></div>
-                  </div>
-                </div>
               </div>
+              <table class="costTable">
+                <tbody
+                  ><tr>
+                    <td> Replacement parts </td>
+                    <td> Approximate cost </td>
+                  </tr>
+                  <tr><td>Freezer Compressor replacement cost</td> <td>$500 to $1,000</td> </tr>
+                  <tr><td>Freezer Evaporator Fan replacement cost</td> <td>$100 to $250</td></tr>
+                  <tr> <td>Freezer  Thermostat replacement cost</td> <td>$85 to $200</td> </tr>
+                  <tr> <td>Freezer Defrost Heater replacement cost</td> <td>$100 to $250</td> </tr>
+                  <tr> <td>Freezer Door Seal (Gasket) replacement cost</td> <td>$85 to $150</td> </tr>
+                  <tr> <td>Freezer Start Relay replacement cost</td> <td>$85 to $150</td> </tr>
+                  <tr> <td>Freezer Control Board replacement cost</td> <td>$150 to $400</td></tr>
+                  <tr> <td>Freezer Temperature Sensor or Thermistor replacement cost</td> <td>$85 to $150</td> </tr>
+                </tbody>
+              </table>
             </div>
+
             <Btn />
           </div>
 
-          <div class="page213-content" id="left-menu-9">
+          <div class="page213-content" id="left-menu-10">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Ways to Save Money on Freezer Repair</h2>
@@ -1512,7 +1506,7 @@ import "css/service/style_services.css";
             <Btn />
           </div>
 
-          <div class="page213-content" id="left-menu-10">
+          <div class="page213-content" id="left-menu-11">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>
@@ -1709,7 +1703,7 @@ import "css/service/style_services.css";
             <Btn />
           </div>
 
-          <div class="page213-content" id="left-menu-11">
+          <div class="page213-content" id="left-menu-12">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>How to decide whether to repair or replace a freezer</h2>
@@ -1973,7 +1967,7 @@ import "css/service/style_services.css";
             <Btn />
           </div>
 
-          <div class="page213-content" id="left-menu-12">
+          <div class="page213-content" id="left-menu-13">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Same Day Appliance Repair at Your Service</h2>
@@ -1994,7 +1988,7 @@ import "css/service/style_services.css";
             </div>
           </div>
 
-          <div class="page213-content" id="left-menu-13">
+          <div class="page213-content" id="left-menu-14">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>How Much Does It Cost to Repair a Freezer?</h2>
@@ -2011,7 +2005,7 @@ import "css/service/style_services.css";
             </div>
           </div>
 
-          <div class="page213-content" id="left-menu-14">
+          <div class="page213-content" id="left-menu-15">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Our Pricing Policy For Freezer Repair and How We Work</h2>
@@ -2202,7 +2196,7 @@ import "css/service/style_services.css";
             <Btn />
           </div>
 
-          <div class="page213-content" id="left-menu-15">
+          <div class="page213-content" id="left-menu-16">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>FAQs</h2>
