--- a/src/pages/services/dryer-repair.astro
+++ b/src/pages/services/dryer-repair.astro
@@ -59,96 +59,90 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>MICROWAVE REPAIR</h2>
+              <h2>Dryer repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-2">
-              <h2>Microwave oven types and their repair needs</h2>
+              <h2>Dryer types and their repair needs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-3">
-              <h2>Common Microwave Issues</h2>
+              <h2>Dryer Replacement Parts Explained</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-4">
-              <h2>Microwave Parts Explained</h2>
+              <h2>Dryer Replacement Parts Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-5">
-              <h2>Microwave Replacement Parts Costs</h2>
+              <h2>Cost to Repair a Dryer Depending on the Brand</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-6">
-              <h2>Cost to Repair a Microwave Depending on the Brand</h2>
+              <h2>Dryer Repair Labor Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-7">
-              <h2>Microwave Repair Labor Costs</h2>
+              <h2>Dryer Repair Cost - Labor only excluding parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Microwave Repair Cost - Labor Only Excluding Parts</h2>
+              <h2>Ways to Save Money on Dryer Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Ways to Save Money on Microwave Repair</h2>
+              <h2>What is Included in Dryer Maintenance and How It Can Help Prevent Repairs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
               <h2>
-                What is included in regular microwave maintenance and how it can
-                help prevent repairs
+                How To Decide Whether To Repair Or Replace a Dryer
               </h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-11">
-              <h2>How to decide whether to repair of replace a microwave</h2>
+              <h2>Same Day Appliance Repair at Your Service</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-12">
-              <h2>Same Day Appliance Repair at your service</h2>
+              <h2>How Much Does It Cost to Repair a Dryer?</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-13">
-              <h2>How Much Does it Cost to Repair a Microwave oven?</h2>
+              <h2>Our Pricing Policy For Dryer Repair And How We Work</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-14">
-              <h2>Our Pricing Policy For Microwave Repair And How We Work</h2>
-            </a>
-          </div>
-
-          <div class="list_left" id="list_left-line">
-            <a href="#left-menu-15">
               <h2>FAQs</h2>
             </a>
           </div>
+
         </div>
 
         <div class="page213-container">
