--- a/src/pages/services/oven-repair.astro
+++ b/src/pages/services/oven-repair.astro
@@ -648,57 +648,13 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/panasonic.webp"
-                      alt="Panasonic"
+                      src="/brand-logos/GE-general-electric.webp"
+                      alt="General Electric"
                     />
                   </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-2">
-                  <a href="#">
-                    <img
-                      width="370px"
-                      height="300px"
-                      src="/brand-logos/samsung.webp"
-                      alt="samsung"
-                    />
-                  </a>
-                </div>
-
-                <div class="logo-brand logo-bran-ph-3">
-                  <a href="#">
-                    <img
-                      width="230px"
-                      height="300px"
-                      src="/brand-logos/GE-general-electric.webp"
-                      alt="GE general electric"
-                    />
-                  </a>
-                </div>
-
-                <div class="logo-brand logo-bran-ph-4">
-                  <a href="#">
-                    <img
-                      width="240px"
-                      height="300px"
-                      src="/brand-logos/lg.webp"
-                      alt="LG"
-                    />
-                  </a>
-                </div>
-
-                <div class="logo-brand logo-bran-ph-5">
-                  <a href="#">
-                    <img
-                      width="290px"
-                      height="300px"
-                      src="/brand-logos/sharp.webp"
-                      alt="Sharp"
-                    />
-                  </a>
-                </div>
-
-                <div class="logo-brand logo-bran-ph-6">
                   <a href="#">
                     <img
                       width="300px"
@@ -709,13 +665,57 @@ import "css/service/style_services.css";
                   </a>
                 </div>
 
+                <div class="logo-brand logo-bran-ph-3">
+                  <a href="#">
+                    <img
+                      width="230px"
+                      height="300px"
+                      src="/brand-logos/frigidaire.webp"
+                      alt="Frigidaire"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-4">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/samsung.webp"
+                      alt="Samsung"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-5">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/lg.webp"
+                      alt="LG"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-6">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/kitchenAid.webp"
+                      alt="KitchenAid"
+                    />
+                  </a>
+                </div>
+
                 <div class="logo-brand logo-bran-ph-7">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/breville.webp"
-                      alt="Sharp"
+                      src="/brand-logos/maytag.webp"
+                      alt="Maytag"
                     />
                   </a>
                 </div>
@@ -725,8 +725,8 @@ import "css/service/style_services.css";
                     <img
                       width="290px"
                       height="300px"
-                      src="/brand-logos/thermador.webp"
-                      alt="Sharp"
+                      src="/brand-logos/bosch.webp"
+                      alt="Bosch"
                     />
                   </a>
                 </div>
@@ -734,10 +734,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-9">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/toshiba.webp"
-                      alt="Sharp"
+                      src="/brand-logos/electrolux.webp"
+                      alt="Electrolux"
                     />
                   </a>
                 </div>
@@ -745,10 +745,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-10">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/frigidaire.webp"
-                      alt="Sharp"
+                      src="/brand-logos/kenmore.webp"
+                      alt="Kenmore"
                     />
                   </a>
                 </div>
@@ -756,10 +756,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-11">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/cove.webp"
-                      alt="Sharp"
+                      src="/brand-logos/viking.webp"
+                      alt="Viking"
                     />
                   </a>
                 </div>
@@ -767,65 +767,202 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-12">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/kitchenAid.webp"
-                      alt="Sharp"
+                      src="/brand-logos/thermador.webp"
+                      alt="Thermador"
                     />
                   </a>
                 </div>
+
+                <div class="logo-brand logo-bran-ph-13">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/wolf.webp"
+                      alt="Wolf"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-14">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/monogram.webp"
+                      alt="monogram"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-15">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/miele.webp"
+                      alt="miele"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-16">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/jennAir.webp"
+                      alt="jennAir"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-17">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/bertazzoni.webp"
+                      alt="Bertazzoni"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-18">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/fisher-paykel.webp"
+                      alt="Fisher & Paykel"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-19">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/cafe.webp"
+                      alt="Cafe"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-20">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/zline.webp"
+                      alt="ZLINE"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-21">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/dacor.webp"
+                      alt="Dacor"
+                    />
+                  </a>
+                </div>
+
               </div>
 
               <div class="full-desc-logo-brand">
                 <p>Brands of microwaves we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
-                  <h3><a href="#">Panasonic</a></h3>
+                  <h3><a href="#">General Electric</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-2">
-                  <h3><a href="#">Samsung</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-3">
-                  <h3><a href="#">GE Appliances</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-4">
-                  <h3><a href="#">LG Electronics</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-5">
-                  <h3><a href="#">Sharp</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-6">
                   <h3><a href="#">Whirlpool</a></h3>
                 </div>
 
-                <div class="desc-logo-brand logo-bran-d-7">
-                  <h3><a href="#">Breville</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-8">
-                  <h3><a href="#">Thermador</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-9">
-                  <h3><a href="#">Toshiba</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-10">
+                <div class="desc-logo-brand logo-bran-d-3">
                   <h3><a href="#">Frigidaire</a></h3>
                 </div>
 
+                <div class="desc-logo-brand logo-bran-d-4">
+                  <h3><a href="#">Samsung</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-5">
+                  <h3><a href="#">LG</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-6">
+                  <h3><a href="#">KitchenAid</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-7">
+                  <h3><a href="#">Maytag</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-8">
+                  <h3><a href="#">Bosch</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-9">
+                  <h3><a href="#">Electrolux</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-10">
+                  <h3><a href="#">Kenmore</a></h3>
+                </div>
+
                 <div class="desc-logo-brand logo-bran-d-11">
-                  <h3><a href="#">Сove</a></h3>
+                  <h3><a href="#">Viking</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-12">
-                  <h3><a href="#">KitchenAid</a></h3>
+                  <h3><a href="#">Thermador</a></h3>
                 </div>
+
+                <div class="desc-logo-brand logo-bran-d-13">
+                  <h3><a href="#">wolf</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-14">
+                  <h3><a href="#">Monogram</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-15">
+                  <h3><a href="#">Miele</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-16">
+                  <h3><a href="#">jennAir</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-17">
+                  <h3><a href="#">Bertazzoni</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-18">
+                  <h3><a href="#">Fisher & Paykel</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-19">
+                  <h3><a href="#">Cafe</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-20">
+                  <h3><a href="#">ZLINE</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-21">
+                  <h3><a href="#">Dacor</a></h3>
+                </div>
+
               </div>
             </div>
 
