--- a/src/pages/services/furnace-repair.astro
+++ b/src/pages/services/furnace-repair.astro
@@ -799,8 +799,8 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/panasonic.webp"
-                      alt="Panasonic"
+                      src="/brand-logos/carrier.webp"
+                      alt="Carrier"
                     />
                   </a>
                 </div>
@@ -808,10 +808,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-2">
                   <a href="#">
                     <img
-                      width="370px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/samsung.webp"
-                      alt="samsung"
+                      src="/brand-logos/lennox.webp"
+                      alt="Lennox"
                     />
                   </a>
                 </div>
@@ -819,10 +819,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-3">
                   <a href="#">
                     <img
-                      width="230px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/GE-general-electric.webp"
-                      alt="GE general electric"
+                      src="/brand-logos/bryant.webp"
+                      alt="Bryant"
                     />
                   </a>
                 </div>
@@ -830,10 +830,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-4">
                   <a href="#">
                     <img
-                      width="240px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/lg.webp"
-                      alt="LG"
+                      src="/brand-logos/goodman.webp"
+                      alt="Goodman"
                     />
                   </a>
                 </div>
@@ -841,10 +841,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-5">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/sharp.webp"
-                      alt="Sharp"
+                      src="/brand-logos/american-standard.webp"
+                      alt="American Standard"
                     />
                   </a>
                 </div>
@@ -854,8 +854,8 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/whirlpool.webp"
-                      alt="Whirlpool"
+                      src="/brand-logos/amana.webp"
+                      alt="Amana"
                     />
                   </a>
                 </div>
@@ -863,10 +863,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-7">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/breville.webp"
-                      alt="Sharp"
+                      src="/brand-logos/heil.webp"
+                      alt="Heil"
                     />
                   </a>
                 </div>
@@ -874,10 +874,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-8">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/thermador.webp"
-                      alt="Sharp"
+                      src="/brand-logos/rheem.webp"
+                      alt="Rheem"
                     />
                   </a>
                 </div>
@@ -885,10 +885,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-9">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/toshiba.webp"
-                      alt="Sharp"
+                      src="/brand-logos/ruud.webp"
+                      alt="Ruud"
                     />
                   </a>
                 </div>
@@ -896,10 +896,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-10">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/frigidaire.webp"
-                      alt="Sharp"
+                      src="/brand-logos/york.webp"
+                      alt="York"
                     />
                   </a>
                 </div>
@@ -907,10 +907,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-11">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/cove.webp"
-                      alt="Sharp"
+                      src="/brand-logos/trane.webp"
+                      alt="Trane"
                     />
                   </a>
                 </div>
@@ -918,10 +918,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-12">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/kitchenAid.webp"
-                      alt="Sharp"
+                      src="/brand-logos/daikin.webp"
+                      alt="Daikin"
                     />
                   </a>
                 </div>
@@ -931,51 +931,51 @@ import "css/service/style_services.css";
                 <p>Brands of microwaves we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
-                  <h3><a href="#">Panasonic</a></h3>
+                  <h3><a href="#">Carrier</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-2">
-                  <h3><a href="#">Samsung</a></h3>
+                  <h3><a href="#">Lennox</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-3">
-                  <h3><a href="#">GE Appliances</a></h3>
+                  <h3><a href="#">Bryant</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-4">
-                  <h3><a href="#">LG Electronics</a></h3>
+                  <h3><a href="#">Goodman</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-5">
-                  <h3><a href="#">Sharp</a></h3>
+                  <h3><a href="#">American Standard</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-6">
-                  <h3><a href="#">Whirlpool</a></h3>
+                  <h3><a href="#">Amana</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-7">
-                  <h3><a href="#">Breville</a></h3>
+                  <h3><a href="#">Heil</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-8">
-                  <h3><a href="#">Thermador</a></h3>
+                  <h3><a href="#">Rheem</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-9">
-                  <h3><a href="#">Toshiba</a></h3>
+                  <h3><a href="#">Ruud</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-10">
-                  <h3><a href="#">Frigidaire</a></h3>
+                  <h3><a href="#">York</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-11">
-                  <h3><a href="#">Сove</a></h3>
+                  <h3><a href="#">Trane</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-12">
-                  <h3><a href="#">KitchenAid</a></h3>
+                  <h3><a href="#">Daikin</a></h3>
                 </div>
               </div>
             </div>
