--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -16,7 +16,7 @@ const menuitems = [
       { title: "Freezer Repair", path: "/services/freezer-repair" },
       { title: "Washing Machine Repair", path: "/services/washing-machine-repair"},
       { title: "Dryer Repair", path: "/services/dryer-repair" },
-      { title: "Stove", path: "/services/stove-repair" },
+      { title: "Stove Repair", path: "/services/stove-repair" },
       { title: "Range Repair", path: "/services/range-repair" },
       { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
       { title: "Oven Repair", path: "/services/oven-repair" },
